[gd_scene load_steps=15 format=4 uid="uid://cb5u4d8i5lwf2"]

[ext_resource type="Script" uid="uid://duo1s0ic2a746" path="res://scripts/puzzle_1.gd" id="1_sjxo2"]
[ext_resource type="PackedScene" uid="uid://bukjm6u0mt0tw" path="res://scenes/wire.tscn" id="2_f0mvw"]
[ext_resource type="PackedScene" uid="uid://dcgby18clyino" path="res://scenes/remove_gate.tscn" id="3_i3ry5"]
[ext_resource type="PackedScene" uid="uid://bl4a1pld6v3mh" path="res://scenes/add_gate.tscn" id="4_d07y3"]
[ext_resource type="Texture2D" uid="uid://da1al1um5semr" path="res://assets/sprites/world_tileset.png" id="5_x4stx"]
[ext_resource type="PackedScene" uid="uid://dyht31nx3qd4n" path="res://scenes/run_circuit.tscn" id="6_8a32l"]
[ext_resource type="PackedScene" uid="uid://m13gbjrmk6ot" path="res://scenes/reset_circuit.tscn" id="7_udsb1"]
[ext_resource type="PackedScene" uid="uid://dog4dsj2egfvx" path="res://scenes/z_gate.tscn" id="8_81nv0"]
[ext_resource type="PackedScene" uid="uid://bujxh17jiq3c2" path="res://scenes/y_gate.tscn" id="9_rfjp7"]
[ext_resource type="PackedScene" uid="uid://bt0vqdy3bjk4l" path="res://scenes/x_gate.tscn" id="10_d0wmm"]
[ext_resource type="PackedScene" uid="uid://b16j76sxip8n4" path="res://scenes/cnot_gate.tscn" id="11_jwowe"]
[ext_resource type="PackedScene" uid="uid://bv41imahweahl" path="res://scenes/hadamard_gate.tscn" id="12_gvcvi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_trtic"]
texture = ExtResource("5_x4stx")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_ir15t"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_trtic")

[node name="Puzzle" type="Node2D"]
script = ExtResource("1_sjxo2")

[node name="wire_up" parent="." instance=ExtResource("2_f0mvw")]
position = Vector2(920, -90)

[node name="wire_down" parent="." instance=ExtResource("2_f0mvw")]
position = Vector2(920, -10)

[node name="Remove_gates" type="Node2D" parent="."]

[node name="remove_gate_left_up" parent="Remove_gates" instance=ExtResource("3_i3ry5")]
position = Vector2(842, -69)

[node name="remove_gate_left_down" parent="Remove_gates" instance=ExtResource("3_i3ry5")]
position = Vector2(842, 9)

[node name="remove_gate_right_down" parent="Remove_gates" instance=ExtResource("3_i3ry5")]
position = Vector2(1095, 9)

[node name="remove_gate_right_up" parent="Remove_gates" instance=ExtResource("3_i3ry5")]
position = Vector2(1095, -69)

[node name="Add_gates" type="Node2D" parent="."]

[node name="add_gate_left_up" parent="Add_gates" instance=ExtResource("4_d07y3")]
position = Vector2(888, -69)

[node name="add_gate_right_up" parent="Add_gates" instance=ExtResource("4_d07y3")]
position = Vector2(1049, -69)

[node name="add_gate_left_down" parent="Add_gates" instance=ExtResource("4_d07y3")]
position = Vector2(888, 9)

[node name="add_gate_right_down" parent="Add_gates" instance=ExtResource("4_d07y3")]
position = Vector2(1049, 9)

[node name="Puzzle_obstacle" type="TileMapLayer" parent="."]
position = Vector2(1216, 2)
tile_map_data = PackedByteArray("AAAAAAAAAQABAAEAAAAAAP//AQABAAEAAAAAAPv/AQAIAAEAAAAAAPr/AQAIAAEAAAAAAPn/AQAIAAEAAAAAAPj/AQAIAAEAAAAAAP7/AQAIAAEAAAA=")
tile_set = SubResource("TileSet_ir15t")

[node name="run_circuit" parent="." instance=ExtResource("6_8a32l")]
position = Vector2(793, -69)

[node name="reset_circuit" parent="." instance=ExtResource("7_udsb1")]
position = Vector2(793, 9)

[node name="gates" type="Node2D" parent="."]

[node name="z_gate" parent="gates" instance=ExtResource("8_81nv0")]
position = Vector2(1131, 11)

[node name="y_gate" parent="gates" instance=ExtResource("9_rfjp7")]
position = Vector2(1182, 11)

[node name="x_gate" parent="gates" instance=ExtResource("10_d0wmm")]
position = Vector2(1198, -69)

[node name="cnot_gate" parent="gates" instance=ExtResource("11_jwowe")]
position = Vector2(1158, -70)

[node name="hadamard_gate" parent="gates" instance=ExtResource("12_gvcvi")]
position = Vector2(767, 12)
